mc.output
Terminals unused in grammar

   FUNCTION


État 28 conflits: 1 décalage/réduction
État 42 conflits: 1 décalage/réduction
État 43 conflits: 2 décalage/réduction
État 44 conflits: 2 décalage/réduction
État 131 conflits: 2 décalage/réduction
État 135 conflits: 2 décalage/réduction


Grammaire

    0 $accept: S $end

    1 S: input

    2 input: scriptMFile

    3 scriptMFile: opt_delimiter
    4            | opt_delimiter statement_list

    5 opt_delimiter: /* vide */
    6              | delimiter

    7 delimiter: null_lines
    8          | empty_lines
    9          | null_lines empty_lines

   10 null_lines: null_line
   11           | null_lines null_line

   12 null_line: ','
   13          | ';'
   14          | empty_lines ','
   15          | empty_lines ';'

   16 empty_lines: NEWLINE
   17            | empty_lines NEWLINE

   18 statement_list: statement opt_delimiter
   19               | statement delimiter statement_list

   20 statement: expr
   21          | assignement
   22          | for_command
   23          | if_command
   24          | while_command

   25 expr: expr '+' expr
   26     | expr '-' expr
   27     | expr '*' expr
   28     | expr TIMES expr
   29     | expr '/' expr
   30     | expr '\\' expr
   31     | expr DIVIDE expr
   32     | expr LDIVIDE expr
   33     | expr '^' expr
   34     | expr POWER expr
   35     | expr EQ expr
   36     | expr NE expr
   37     | expr '<' expr
   38     | expr '>' expr
   39     | expr LE expr
   40     | expr GE expr
   41     | expr '|' expr
   42     | expr '&' expr
   43     | expr LOR expr
   44     | expr LAND expr
   45     | expr TRANSPOSE
   46     | expr CTRANSPOSE
   47     | '(' expr ')'
   48     | '-' expr
   49     | '+' expr
   50     | '~' expr
   51     | colon_expr
   52     | colon_expr1
   53     | matrix
   54     | NBRE
   55     | TEXT
   56     | ID
   57     | ID '(' ref_expr_list ')'

   58 colon_expr: expr ':' expr

   59 colon_expr1: colon_expr ':' expr

   60 ref_index: ':'
   61          | expr

   62 ref_expr_list: /* vide */
   63              | comma_ref_list

   64 comma_ref_list: ref_index
   65               | ref_index ',' comma_ref_list

   66 matrix: '[' rows ']'

   67 rows: /* vide */
   68     | row
   69     | rows ';'
   70     | rows ';' row
   71     | rows NEWLINE
   72     | rows NEWLINE row

   73 row: expr
   74    | row_with_commas
   75    | row_with_commas expr

   76 row_with_commas: expr ','
   77                | row_with_commas expr ','

   78 assignement: ID '=' expr
   79            | ID '(' ref_expr_list ')' '=' expr
   80            | LD ID RD '=' expr
   81            | LD ID '(' ref_expr_list ')' RD '=' expr
   82            | LD output_ref_list RD '=' ID '(' ref_expr_list ')'

   83 output_ref_list: out_ref ',' out_ref
   84                | output_ref_list ',' out_ref

   85 out_ref: ID
   86        | ID '(' ref_expr_list ')'

   87 for_command: FOR ID '=' expr opt_delimiter statement_list END

   88 if_command: if_block else_if_list else_block END

   89 if_block: IF expr opt_delimiter statement_list

   90 else_if_list: /* vide */
   91             | elseif_block else_if_list

   92 elseif_block: ELSEIF expr opt_delimiter statement_list

   93 else_block: /* vide */
   94           | ELSE opt_delimiter statement_list

   95 while_command: WHILE expr opt_delimiter statement_list END


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'&' (38) 42
'(' (40) 47 57 79 81 82 86
')' (41) 47 57 79 81 82 86
'*' (42) 27
'+' (43) 25 49
',' (44) 12 14 65 76 77 83 84
'-' (45) 26 48
'/' (47) 29
':' (58) 58 59 60
';' (59) 13 15 69 70
'<' (60) 37
'=' (61) 78 79 80 81 82 87
'>' (62) 38
'[' (91) 66
'\\' (92) 30
']' (93) 66
'^' (94) 33
'|' (124) 41
'~' (126) 50
error (256)
TEXT (258) 55
END (259) 87 88 95
FUNCTION (260)
FOR (261) 87
IF (262) 89
ELSEIF (263) 92
ELSE (264) 94
WHILE (265) 95
NBRE (266) 54
ID (267) 56 57 78 79 80 81 82 85 86 87
NEWLINE (268) 16 17 71 72
TIMES (269) 28
DIVIDE (270) 31
LDIVIDE (271) 32
POWER (272) 34
TRANSPOSE (273) 45
CTRANSPOSE (274) 46
EQ (275) 35
NE (276) 36
LE (277) 39
LOR (278) 43
LAND (279) 44
LD (280) 80 81 82
RD (281) 80 81 82
GE (282) 40
PLUSUNAIRE (283)
MOINSUNAIRE (284)


Non-terminaux, suivis des règles où ils apparaissent

$accept (49)
    à gauche: 0
S (50)
    à gauche: 1, à droite: 0
input (51)
    à gauche: 2, à droite: 1
scriptMFile (52)
    à gauche: 3 4, à droite: 2
opt_delimiter (53)
    à gauche: 5 6, à droite: 3 4 18 87 89 92 94 95
delimiter (54)
    à gauche: 7 8 9, à droite: 6 19
null_lines (55)
    à gauche: 10 11, à droite: 7 9 11
null_line (56)
    à gauche: 12 13 14 15, à droite: 10 11
empty_lines (57)
    à gauche: 16 17, à droite: 8 9 14 15 17
statement_list (58)
    à gauche: 18 19, à droite: 4 19 87 89 92 94 95
statement (59)
    à gauche: 20 21 22 23 24, à droite: 18 19
expr (60)
    à gauche: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 53 54 55 56 57, à droite: 20 25
    26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 58 59 61 73 75 76 77 78 79 80 81 87 89 92 95
colon_expr (61)
    à gauche: 58, à droite: 51 59
colon_expr1 (62)
    à gauche: 59, à droite: 52
ref_index (63)
    à gauche: 60 61, à droite: 64 65
ref_expr_list (64)
    à gauche: 62 63, à droite: 57 79 81 82 86
comma_ref_list (65)
    à gauche: 64 65, à droite: 63 65
matrix (66)
    à gauche: 66, à droite: 53
rows (67)
    à gauche: 67 68 69 70 71 72, à droite: 66 69 70 71 72
row (68)
    à gauche: 73 74 75, à droite: 68 70 72
row_with_commas (69)
    à gauche: 76 77, à droite: 74 75 77
assignement (70)
    à gauche: 78 79 80 81 82, à droite: 21
output_ref_list (71)
    à gauche: 83 84, à droite: 82 84
out_ref (72)
    à gauche: 85 86, à droite: 83 84
for_command (73)
    à gauche: 87, à droite: 22
if_command (74)
    à gauche: 88, à droite: 23
if_block (75)
    à gauche: 89, à droite: 88
else_if_list (76)
    à gauche: 90 91, à droite: 88 91
elseif_block (77)
    à gauche: 92, à droite: 91
else_block (78)
    à gauche: 93 94, à droite: 88
while_command (79)
    à gauche: 95, à droite: 24


état 0

    0 $accept: . S $end

    NEWLINE  décalage et aller à l'état 1
    ','      décalage et aller à l'état 2
    ';'      décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 5 (opt_delimiter)

    S              aller à l'état 4
    input          aller à l'état 5
    scriptMFile    aller à l'état 6
    opt_delimiter  aller à l'état 7
    delimiter      aller à l'état 8
    null_lines     aller à l'état 9
    null_line      aller à l'état 10
    empty_lines    aller à l'état 11


état 1

   16 empty_lines: NEWLINE .

    $défaut  réduction par utilisation de la règle 16 (empty_lines)


état 2

   12 null_line: ',' .

    $défaut  réduction par utilisation de la règle 12 (null_line)


état 3

   13 null_line: ';' .

    $défaut  réduction par utilisation de la règle 13 (null_line)


état 4

    0 $accept: S . $end

    $end  décalage et aller à l'état 12


état 5

    1 S: input .

    $défaut  réduction par utilisation de la règle 1 (S)


état 6

    2 input: scriptMFile .

    $défaut  réduction par utilisation de la règle 2 (input)


état 7

    3 scriptMFile: opt_delimiter .
    4            | opt_delimiter . statement_list

    TEXT   décalage et aller à l'état 13
    FOR    décalage et aller à l'état 14
    IF     décalage et aller à l'état 15
    WHILE  décalage et aller à l'état 16
    NBRE   décalage et aller à l'état 17
    ID     décalage et aller à l'état 18
    LD     décalage et aller à l'état 19
    '+'    décalage et aller à l'état 20
    '-'    décalage et aller à l'état 21
    '~'    décalage et aller à l'état 22
    '('    décalage et aller à l'état 23
    '['    décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 3 (scriptMFile)

    statement_list  aller à l'état 25
    statement       aller à l'état 26
    expr            aller à l'état 27
    colon_expr      aller à l'état 28
    colon_expr1     aller à l'état 29
    matrix          aller à l'état 30
    assignement     aller à l'état 31
    for_command     aller à l'état 32
    if_command      aller à l'état 33
    if_block        aller à l'état 34
    while_command   aller à l'état 35


état 8

    6 opt_delimiter: delimiter .

    $défaut  réduction par utilisation de la règle 6 (opt_delimiter)


état 9

    7 delimiter: null_lines .
    9          | null_lines . empty_lines
   11 null_lines: null_lines . null_line

    NEWLINE  décalage et aller à l'état 1
    ','      décalage et aller à l'état 2
    ';'      décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 7 (delimiter)

    null_line    aller à l'état 36
    empty_lines  aller à l'état 37


état 10

   10 null_lines: null_line .

    $défaut  réduction par utilisation de la règle 10 (null_lines)


état 11

    8 delimiter: empty_lines .
   14 null_line: empty_lines . ','
   15          | empty_lines . ';'
   17 empty_lines: empty_lines . NEWLINE

    NEWLINE  décalage et aller à l'état 38
    ','      décalage et aller à l'état 39
    ';'      décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 8 (delimiter)


état 12

    0 $accept: S $end .

    $défaut  accepter


état 13

   55 expr: TEXT .

    $défaut  réduction par utilisation de la règle 55 (expr)


état 14

   87 for_command: FOR . ID '=' expr opt_delimiter statement_list END

    ID  décalage et aller à l'état 41


état 15

   89 if_block: IF . expr opt_delimiter statement_list

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    expr         aller à l'état 43
    colon_expr   aller à l'état 28
    colon_expr1  aller à l'état 29
    matrix       aller à l'état 30


état 16

   95 while_command: WHILE . expr opt_delimiter statement_list END

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    expr         aller à l'état 44
    colon_expr   aller à l'état 28
    colon_expr1  aller à l'état 29
    matrix       aller à l'état 30


état 17

   54 expr: NBRE .

    $défaut  réduction par utilisation de la règle 54 (expr)


état 18

   56 expr: ID .
   57     | ID . '(' ref_expr_list ')'
   78 assignement: ID . '=' expr
   79            | ID . '(' ref_expr_list ')' '=' expr

    '('  décalage et aller à l'état 45
    '='  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 56 (expr)


état 19

   80 assignement: LD . ID RD '=' expr
   81            | LD . ID '(' ref_expr_list ')' RD '=' expr
   82            | LD . output_ref_list RD '=' ID '(' ref_expr_list ')'

    ID  décalage et aller à l'état 47

    output_ref_list  aller à l'état 48
    out_ref          aller à l'état 49


état 20

   49 expr: '+' . expr

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    expr         aller à l'état 50
    colon_expr   aller à l'état 28
    colon_expr1  aller à l'état 29
    matrix       aller à l'état 30


état 21

   48 expr: '-' . expr

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    expr         aller à l'état 51
    colon_expr   aller à l'état 28
    colon_expr1  aller à l'état 29
    matrix       aller à l'état 30


état 22

   50 expr: '~' . expr

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    expr         aller à l'état 52
    colon_expr   aller à l'état 28
    colon_expr1  aller à l'état 29
    matrix       aller à l'état 30


état 23

   47 expr: '(' . expr ')'

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    expr         aller à l'état 53
    colon_expr   aller à l'état 28
    colon_expr1  aller à l'état 29
    matrix       aller à l'état 30


état 24

   66 matrix: '[' . rows ']'

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 67 (rows)

    expr             aller à l'état 54
    colon_expr       aller à l'état 28
    colon_expr1      aller à l'état 29
    matrix           aller à l'état 30
    rows             aller à l'état 55
    row              aller à l'état 56
    row_with_commas  aller à l'état 57


état 25

    4 scriptMFile: opt_delimiter statement_list .

    $défaut  réduction par utilisation de la règle 4 (scriptMFile)


état 26

   18 statement_list: statement . opt_delimiter
   19               | statement . delimiter statement_list

    NEWLINE  décalage et aller à l'état 1
    ','      décalage et aller à l'état 2
    ';'      décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 5 (opt_delimiter)

    opt_delimiter  aller à l'état 58
    delimiter      aller à l'état 59
    null_lines     aller à l'état 9
    null_line      aller à l'état 10
    empty_lines    aller à l'état 11


état 27

   20 statement: expr .
   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   58 colon_expr: expr . ':' expr

    TIMES       décalage et aller à l'état 60
    DIVIDE      décalage et aller à l'état 61
    LDIVIDE     décalage et aller à l'état 62
    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    EQ          décalage et aller à l'état 66
    NE          décalage et aller à l'état 67
    LE          décalage et aller à l'état 68
    LOR         décalage et aller à l'état 69
    LAND        décalage et aller à l'état 70
    '|'         décalage et aller à l'état 71
    '&'         décalage et aller à l'état 72
    '<'         décalage et aller à l'état 73
    '>'         décalage et aller à l'état 74
    GE          décalage et aller à l'état 75
    ':'         décalage et aller à l'état 76
    '+'         décalage et aller à l'état 77
    '-'         décalage et aller à l'état 78
    '*'         décalage et aller à l'état 79
    '/'         décalage et aller à l'état 80
    '\\'        décalage et aller à l'état 81
    '^'         décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 20 (statement)


état 28

   51 expr: colon_expr .
   59 colon_expr1: colon_expr . ':' expr

    ':'  décalage et aller à l'état 83

    ':'       [réduction par utilisation de la règle 51 (expr)]
    $défaut  réduction par utilisation de la règle 51 (expr)


état 29

   52 expr: colon_expr1 .

    $défaut  réduction par utilisation de la règle 52 (expr)


état 30

   53 expr: matrix .

    $défaut  réduction par utilisation de la règle 53 (expr)


état 31

   21 statement: assignement .

    $défaut  réduction par utilisation de la règle 21 (statement)


état 32

   22 statement: for_command .

    $défaut  réduction par utilisation de la règle 22 (statement)


état 33

   23 statement: if_command .

    $défaut  réduction par utilisation de la règle 23 (statement)


état 34

   88 if_command: if_block . else_if_list else_block END

    ELSEIF  décalage et aller à l'état 84

    $défaut  réduction par utilisation de la règle 90 (else_if_list)

    else_if_list  aller à l'état 85
    elseif_block  aller à l'état 86


état 35

   24 statement: while_command .

    $défaut  réduction par utilisation de la règle 24 (statement)


état 36

   11 null_lines: null_lines null_line .

    $défaut  réduction par utilisation de la règle 11 (null_lines)


état 37

    9 delimiter: null_lines empty_lines .
   14 null_line: empty_lines . ','
   15          | empty_lines . ';'
   17 empty_lines: empty_lines . NEWLINE

    NEWLINE  décalage et aller à l'état 38
    ','      décalage et aller à l'état 39
    ';'      décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 9 (delimiter)


état 38

   17 empty_lines: empty_lines NEWLINE .

    $défaut  réduction par utilisation de la règle 17 (empty_lines)


état 39

   14 null_line: empty_lines ',' .

    $défaut  réduction par utilisation de la règle 14 (null_line)


état 40

   15 null_line: empty_lines ';' .

    $défaut  réduction par utilisation de la règle 15 (null_line)


état 41

   87 for_command: FOR ID . '=' expr opt_delimiter statement_list END

    '='  décalage et aller à l'état 87


état 42

   56 expr: ID .
   57     | ID . '(' ref_expr_list ')'

    '('  décalage et aller à l'état 88

    '('       [réduction par utilisation de la règle 56 (expr)]
    $défaut  réduction par utilisation de la règle 56 (expr)


état 43

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   58 colon_expr: expr . ':' expr
   89 if_block: IF expr . opt_delimiter statement_list

    NEWLINE     décalage et aller à l'état 1
    TIMES       décalage et aller à l'état 60
    DIVIDE      décalage et aller à l'état 61
    LDIVIDE     décalage et aller à l'état 62
    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    EQ          décalage et aller à l'état 66
    NE          décalage et aller à l'état 67
    LE          décalage et aller à l'état 68
    LOR         décalage et aller à l'état 69
    LAND        décalage et aller à l'état 70
    '|'         décalage et aller à l'état 71
    '&'         décalage et aller à l'état 72
    '<'         décalage et aller à l'état 73
    '>'         décalage et aller à l'état 74
    GE          décalage et aller à l'état 75
    ':'         décalage et aller à l'état 76
    '+'         décalage et aller à l'état 77
    '-'         décalage et aller à l'état 78
    '*'         décalage et aller à l'état 79
    '/'         décalage et aller à l'état 80
    '\\'        décalage et aller à l'état 81
    '^'         décalage et aller à l'état 82
    ','         décalage et aller à l'état 2
    ';'         décalage et aller à l'état 3

    '+'       [réduction par utilisation de la règle 5 (opt_delimiter)]
    '-'       [réduction par utilisation de la règle 5 (opt_delimiter)]
    $défaut  réduction par utilisation de la règle 5 (opt_delimiter)

    opt_delimiter  aller à l'état 89
    delimiter      aller à l'état 8
    null_lines     aller à l'état 9
    null_line      aller à l'état 10
    empty_lines    aller à l'état 11


état 44

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   58 colon_expr: expr . ':' expr
   95 while_command: WHILE expr . opt_delimiter statement_list END

    NEWLINE     décalage et aller à l'état 1
    TIMES       décalage et aller à l'état 60
    DIVIDE      décalage et aller à l'état 61
    LDIVIDE     décalage et aller à l'état 62
    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    EQ          décalage et aller à l'état 66
    NE          décalage et aller à l'état 67
    LE          décalage et aller à l'état 68
    LOR         décalage et aller à l'état 69
    LAND        décalage et aller à l'état 70
    '|'         décalage et aller à l'état 71
    '&'         décalage et aller à l'état 72
    '<'         décalage et aller à l'état 73
    '>'         décalage et aller à l'état 74
    GE          décalage et aller à l'état 75
    ':'         décalage et aller à l'état 76
    '+'         décalage et aller à l'état 77
    '-'         décalage et aller à l'état 78
    '*'         décalage et aller à l'état 79
    '/'         décalage et aller à l'état 80
    '\\'        décalage et aller à l'état 81
    '^'         décalage et aller à l'état 82
    ','         décalage et aller à l'état 2
    ';'         décalage et aller à l'état 3

    '+'       [réduction par utilisation de la règle 5 (opt_delimiter)]
    '-'       [réduction par utilisation de la règle 5 (opt_delimiter)]
    $défaut  réduction par utilisation de la règle 5 (opt_delimiter)

    opt_delimiter  aller à l'état 90
    delimiter      aller à l'état 8
    null_lines     aller à l'état 9
    null_line      aller à l'état 10
    empty_lines    aller à l'état 11


état 45

   57 expr: ID '(' . ref_expr_list ')'
   79 assignement: ID '(' . ref_expr_list ')' '=' expr

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    ':'   décalage et aller à l'état 91
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 62 (ref_expr_list)

    expr            aller à l'état 92
    colon_expr      aller à l'état 28
    colon_expr1     aller à l'état 29
    ref_index       aller à l'état 93
    ref_expr_list   aller à l'état 94
    comma_ref_list  aller à l'état 95
    matrix          aller à l'état 30


état 46

   78 assignement: ID '=' . expr

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    expr         aller à l'état 96
    colon_expr   aller à l'état 28
    colon_expr1  aller à l'état 29
    matrix       aller à l'état 30


état 47

   80 assignement: LD ID . RD '=' expr
   81            | LD ID . '(' ref_expr_list ')' RD '=' expr
   85 out_ref: ID .
   86        | ID . '(' ref_expr_list ')'

    RD   décalage et aller à l'état 97
    '('  décalage et aller à l'état 98

    $défaut  réduction par utilisation de la règle 85 (out_ref)


état 48

   82 assignement: LD output_ref_list . RD '=' ID '(' ref_expr_list ')'
   84 output_ref_list: output_ref_list . ',' out_ref

    RD   décalage et aller à l'état 99
    ','  décalage et aller à l'état 100


état 49

   83 output_ref_list: out_ref . ',' out_ref

    ','  décalage et aller à l'état 101


état 50

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   49     | '+' expr .
   58 colon_expr: expr . ':' expr

    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    '^'         décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 49 (expr)


état 51

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   48     | '-' expr .
   58 colon_expr: expr . ':' expr

    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    '^'         décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 48 (expr)


état 52

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   50     | '~' expr .
   58 colon_expr: expr . ':' expr

    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    '^'         décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 50 (expr)


état 53

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   47     | '(' expr . ')'
   58 colon_expr: expr . ':' expr

    TIMES       décalage et aller à l'état 60
    DIVIDE      décalage et aller à l'état 61
    LDIVIDE     décalage et aller à l'état 62
    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    EQ          décalage et aller à l'état 66
    NE          décalage et aller à l'état 67
    LE          décalage et aller à l'état 68
    LOR         décalage et aller à l'état 69
    LAND        décalage et aller à l'état 70
    '|'         décalage et aller à l'état 71
    '&'         décalage et aller à l'état 72
    '<'         décalage et aller à l'état 73
    '>'         décalage et aller à l'état 74
    GE          décalage et aller à l'état 75
    ':'         décalage et aller à l'état 76
    '+'         décalage et aller à l'état 77
    '-'         décalage et aller à l'état 78
    '*'         décalage et aller à l'état 79
    '/'         décalage et aller à l'état 80
    '\\'        décalage et aller à l'état 81
    '^'         décalage et aller à l'état 82
    ')'         décalage et aller à l'état 102


état 54

   25 expr: expr . '+' expr
   26     | expr . '-' expr
   27     | expr . '*' expr
   28     | expr . TIMES expr
   29     | expr . '/' expr
   30     | expr . '\\' expr
   31     | expr . DIVIDE expr
   32     | expr . LDIVIDE expr
   33     | expr . '^' expr
   34     | expr . POWER expr
   35     | expr . EQ expr
   36     | expr . NE expr
   37     | expr . '<' expr
   38     | expr . '>' expr
   39     | expr . LE expr
   40     | expr . GE expr
   41     | expr . '|' expr
   42     | expr . '&' expr
   43     | expr . LOR expr
   44     | expr . LAND expr
   45     | expr . TRANSPOSE
   46     | expr . CTRANSPOSE
   58 colon_expr: expr . ':' expr
   73 row: expr .
   76 row_with_commas: expr . ','

    TIMES       décalage et aller à l'état 60
    DIVIDE      décalage et aller à l'état 61
    LDIVIDE     décalage et aller à l'état 62
    POWER       décalage et aller à l'état 63
    TRANSPOSE   décalage et aller à l'état 64
    CTRANSPOSE  décalage et aller à l'état 65
    EQ          décalage et aller à l'état 66
    NE          décalage et aller à l'état 67
    LE          décalage et aller à l'état 68
    LOR         décalage et aller à l'état 69
    LAND        décalage et aller à l'état 70
    '|'         décalage et aller à l'état 71
    '&'         décalage et aller à l'état 72
    '<'         décalage et aller à l'état 73
    '>'         décalage et aller à l'état 74
    GE          décalage et aller à l'état 75
    ':'         décalage et aller à l'état 76
    '+'         décalage et aller à l'état 77
    '-'         décalage et aller à l'état 78
    '*'         décalage et aller à l'état 79
    '/'         décalage et aller à l'état 80
    '\\'        décalage et aller à l'état 81
    '^'         décalage et aller à l'état 82
    ','         décalage et aller à l'état 103

    $défaut  réduction par utilisation de la règle 73 (row)


état 55

   66 matrix: '[' rows . ']'
   69 rows: rows . ';'
   70     | rows . ';' row
   71     | rows . NEWLINE
   72     | rows . NEWLINE row

    NEWLINE  décalage et aller à l'état 104
    ';'      décalage et aller à l'état 105
    ']'      décalage et aller à l'état 106


état 56

   68 rows: row .

    $défaut  réduction par utilisation de la règle 68 (rows)


état 57

   74 row: row_with_commas .
   75    | row_with_commas . expr
   77 row_with_commas: row_with_commas . expr ','

    TEXT  décalage et aller à l'état 13
    NBRE  décalage et aller à l'état 17
    ID    décalage et aller à l'état 42
    '+'   décalage et aller à l'état 20
    '-'   décalage et aller à l'état 21
    '~'   décalage et aller à l'état 22
    '('   décalage et aller à l'état 23
    '['   décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 74 (row)
